--- a/jbirthdaycard.html
+++ b/jbirthdaycard.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
   <title>Happy Birthday Card</title>
   <style>
     body {
-      background-color: #f1f1f1;
-      font-family: Arial, sans-serif;
-    }
+	.arching-text {
+        font-family: "Tiny5", sans-serif;
+ 	font-style: normal;
+        font-size: 30px;
+        text-align: center;
+        animation: arching-animation 3s infinite linear;
+            font-weight: bold;
+            color: pink;
+        }
+
 
     .card {
-      width: 70%;
-      margin: 50px auto;
-      background-color: white;
-      border-radius: 10px;
+      width: 400px;
+      margin: 0 auto;
       padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      position: relative;
-      overflow: hidden;
-      color: white;
+      background-color: #FFF6FF;
+      border-radius: 10px;
+      box-shadow: 0 0 50px #ee1192;
+      animation: shake 4s;
     }
 
-    .sparkles-video {
-      position: absolute;
+    @keyframes shake {
+      0% { transform: rotate(0); }
+      10% { transform: rotate(-10deg); }
+      20% { transform: rotate(10deg); }
+      30% { transform: rotate(-10deg); }
+      40% { transform: rotate(10deg); }
+      50% { transform: rotate(-10deg); }
+      60% { transform: rotate(10deg); }
+      70% { transform: rotate(-10deg); }
+      80% { transform: rotate(10deg); }
+      90% { transform: rotate(-10deg); }
+      100% { transform: rotate(0); }
+    }
+	.sparkles-video {
+      position: cover;
       top: 0;
       left: 0;
       width: 100%;
@@ -32,24 +51,37 @@
       opacity: 0.8;
     }
 
-    .content {
-      margin-top: 30px;
+    .card p {
+      font-size: 16px;
+      line-height: 1.5;
+      text-align: center;
+      color: #555555;
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <video class="sparkles-video" autoplay loop muted>
+	 <video class="sparkles-video" autoplay loop muted>
       <source src="https://assets.mixkit.co/videos/18151/18151-720.mp4" type="video/mp4">
     </video>
-    <div class="content">
-      <h1>Happy Birthday!</h1>
-      <p>I have never written a birthday greeting from the heart but here I go. Happy Birthday! I honestly don’t know where to begin but I love and is honestly enjoying this journey with you. 💕 You are the sister I have without the relation of blood and this bond is unbreakable. Recently, while I was watching a KDrama I suddenly think about our times together bad, happy, sad, prayer, sorrow and wellbeing “but wait when did me and Jasi even became friends and I laughed cause our friendship had no timing”. You are strong, confident, outspoken, emotionally intelligent, edifying, competent, beautiful and super genuine. I really do admire you and I will say it over 100 times as needed. I Love You Jasi-ann McGregor. I pray the lord continue to bless our friendship and I pray he keeps watering your seeds because I know when he’s finish you will spur blossoms 🌸💐.</p>
-    </div>
+	<div class="arching-text">
+        <p>HAPPY BIRTHDAY J</p>
+	</div>
+    <p>
+      I have never written a birthday greeting from the heart but here I go. Happy Birthday! I honestly don’t know where to begin but I love and is honestly enjoying this journey with you. 💕 You are the sister I have without the relation of blood and this bond is unbreakable. Recently, while I was watching a KDrama I suddenly think about our times together bad, happy, sad, prayer, sorrow and wellbeing  “but wait when did me and Jasi even became friends and I laughed cause our friendship had no timing”. You are strong, confident, outspoken, emotionally intelligent, edifying, competent, beautiful and super genuine. I really do admire you and I will say it over 100 times as needed. I Love You Jasi-ann McGregor. I pray the lord continue to bless our friendship and I pray he keeps watering your seeds because I know when he’s finish you will spur blossoms 🌸💐.
+    </p>
   </div>
 
   <script>
-    // JavaScript code can be added here for any additional functionality or interactivity.
+    const card = document.querySelector('.card');
+
+    card.addEventListener('mouseenter', () => {
+      card.style.animation = 'none';
+    });
+
+    card.addEventListener('mouseleave', () => {
+      card.style.animation = 'shake 2s';
+    });
   </script>
 </body>
 </html>
